--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
     --light-color: #fff;
     --dark-color: #000;
     --grey-color: #e2dede;
-    --bg-color: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    --bg-color: linear-gradient(180deg, #242582 0%, rgba(9, 9, 121, 1) 35%, #f64c72 100%);
     --transition: all 300ms ease-in-out;
 }
 
