refactor: existing code and new code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,56 +17,56 @@ html {
     --transition: all 300ms ease-in-out;
 }
 
+.logo {
+    width: 12em;
+    height: 12em;
+    margin: auto;
+    display: block;
+    margin-bottom: 2rem;
+}
 .flex {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 body {
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
     color: var(--dark-color);
     background: var(--bg-color);
 }
-
 .wrapper {
     background: var(--light-color);
     padding: 1.5rem 4rem 3rem 4rem;
-    width: 600px;
-    height: 680px;
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+    width: 60vw;
+    height: 60vh;
+    border-radius: 1.5rem;
     position: relative;
     box-shadow: 0 4px 6px rgb(0 0 0 / 10%), 0 1px 3px rgb(0 0 0 / 10%);
 }
-
 .quiz-title {
     text-align: center;
     font-size: 2rem;
 }
-
 .quiz-score {
     text-align: right;
     font-weight: 600;
     font-size: 1.2rem;
     margin-bottom: 1rem;
-    border: 5px solid var(--grey-color);
+    /* border: 5px solid var(--grey-color); */
     font-weight: bold;
     width: 100px;
     height: 50px;
     margin: 0.5rem auto 1rem auto;
     color: var(--main-color);
 }
-
 .quiz-question {
     font-size: 1.2rem;
     text-align: center;
     line-height: 1.3;
     margin-bottom: 2rem;
 }
-
 .quiz-question .category {
     font-size: 0.9rem;
     font-weight: 500;
@@ -77,12 +77,10 @@ body {
     margin-top: 0.5rem;
     display: inline-block;
 }
-
 .quiz-options {
     list-style-type: none;
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
 }
-
 .quiz-options li {
     border-radius: 0.5rem;
     font-weight: 600;
@@ -95,18 +93,15 @@ body {
     box-shadow: 0 4px 0 0 #6c4298;
     transition: var(--transition);
 }
-
 .quiz-options li:hover {
     background-color: var(--grey-color);
     color: var(--dark-color);
     border-color: var(--grey-color);
     box-shadow: 0 4px 0 0 #bbbbbb;
 }
-
 .quiz-options li:active {
     transform: scale(0.97);
 }
-
 /* js related */
 .selected {
     background-color: var(--grey-color) !important;
@@ -114,7 +109,6 @@ body {
     border-color: var(--grey-color) !important;
     box-shadow: 0 4px 0 0 #bbbbbb !important;
 }
-
 .quiz-foot button {
     border: none;
     border-radius: 0.5rem;
@@ -133,27 +127,22 @@ body {
     transition: var(--transition);
     box-shadow: 0 4px 0 0 #bbbbbb;
 }
-
 .quiz-foot button:hover {
     background-color: #e6e6e6;
     box-shadow: 0 4px 0 0 #a7a7a7;
 }
-
 .quiz-foot button:active {
     transform: scale(0.95);
 }
-
 #play-again {
     display: none;
 }
-
 #result {
     padding: 0.7rem 0;
     text-align: center;
     font-weight: 600;
     font-size: 1.3rem;
 }
-
 #result i {
     width: 30px;
     height: 30px;
@@ -165,21 +154,244 @@ body {
     color: var(--light-color);
 }
 
-@media (max-width: 678px) {
-    .quiz-title {
-        font-size: 1.6rem;
-    }
+/* MEDIA QUERIES */
 
+/* Extra small devices (phones, max-width 600px and down) */
+@media only screen and (max-width: 568px) {
+    .quiz-title {
+        font-size: 1.5rem;
+    }
     .wrapper {
         margin: 3rem 0;
-        width: 90%;
-        height: 90%;
+        width: 100vw;
+        height: 100vh;
         padding: 1.5rem 1rem 3rem 1rem;
-        border-top-left-radius: 0;
-        border-bottom-right-radius: 0;
+        border-radius: 0;
     }
+    .quiz-question {
+        font-size: 1rem;
+    }
+    .quiz-score {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+        /* border: 2px solid var(--grey-color); */
+        font-weight: bold;
+        width: 5rem;
+        height: 2rem;
+    }
+    .quiz-question .category {
+        font-size: 0.9rem;
+        padding: 0.2rem 0.4rem;
+        display: inline-block;
+    }
+    .quiz-options {
+        padding-left: 0;
+    }
+    .quiz-options li {
+        border-radius: 0.2rem;
+        font-weight: 600;
+        margin: 0.7rem 0;
+        padding: 0.2rem 1rem;
+        font-size: 0.75rem;
+    }
+    .quiz-foot button {
+        font-size: 0.75rem;
+    }
+    #result {
+        font-size: 1.3rem;
+    }
+    #result i {
+        font-size: 1.3rem;
+    }
+}
 
+/* Small devices (portrait tablets and large phones, min-width 568px and up) */
+@media only screen and (min-width: 568px) {
+    .quiz-title {
+        font-size: 2rem;
+    }
+    .wrapper {
+        margin: 3rem 0;
+        width: 90vw;
+        height: 60vh;
+        padding: 1.5rem 1rem 3rem 1rem;
+        border-radius: 1rem;
+    }
+    .quiz-question {
+        font-size: 1.5rem;
+    }
+    .quiz-score {
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
+        /* border: 2px solid var(--grey-color); */
+        font-weight: bold;
+        width: 6rem;
+        height: 3rem;
+    }
+    .quiz-question .category {
+        font-size: 0.9rem;
+        padding: 0.4rem 0.8rem;
+    }
+    .quiz-options {
+        padding-left: 0;
+    }
+    .quiz-options li {
+        border-radius: 0.5rem;
+        margin: 1rem 0;
+        padding: 0.4rem 1rem;
+        font-size: 1.2rem;
+    }
     .quiz-foot button {
         font-size: 1rem;
+        margin-top: 5rem;
+    }
+    #result {
+        font-size: 1.3rem;
+    }
+    #result i {
+        font-size: 1.3rem;
+    }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .quiz-title {
+        font-size: 2rem;
+    }
+    .wrapper {
+        margin: 3rem 0;
+        width: 80vw;
+        height: 70vh;
+        padding: 1.5rem 1rem 3rem 1rem;
+        border-radius: 1rem;
+    }
+    .quiz-question {
+        font-size: 1.5rem;
+    }
+    .quiz-score {
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+        /* border: 2px solid var(--grey-color); */
+        font-weight: bold;
+        width: 8rem;
+        height: 4rem;
+    }
+    .quiz-question .category {
+        font-size: 1.2rem;
+        padding: 0.5rem 0.9rem;
+    }
+    .quiz-options {
+        padding-left: 0;
+    }
+    .quiz-options li {
+        border-radius: 0.5rem;
+        margin: 1rem 0;
+        padding: 0.4rem 1rem;
+        font-size: 1.2rem;
+    }
+    .quiz-foot button {
+        font-size: 1rem;
+        margin-top: 5rem;
+    }
+    #result {
+        font-size: 1.3rem;
+    }
+    #result i {
+        font-size: 1.3rem;
+    }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .quiz-title {
+        font-size: 2rem;
+    }
+    .wrapper {
+        margin: 3rem 0;
+        width: 60vw;
+        height: 90vh;
+        padding: 1.5rem 1rem 3rem 1rem;
+        border-radius: 1rem;
+    }
+    .quiz-question {
+        font-size: 1.5rem;
+    }
+    .quiz-score {
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+        /* border: 2px solid var(--grey-color); */
+        font-weight: bold;
+        width: 8rem;
+        height: 4rem;
+    }
+    .quiz-question .category {
+        font-size: 1.2rem;
+        padding: 0.6rem 1rem;
+        margin-top: 2rem;
+    }
+    .quiz-options {
+        padding-left: 0;
+    }
+    .quiz-options li {
+        border-radius: 0.5rem;
+        margin: 1rem 2rem;
+        padding: 0.6rem 1.2rem;
+        font-size: 1.5rem;
+    }
+    .quiz-foot button {
+        font-size: 1.2rem;
+        margin-top: 5rem;
+    }
+    #result {
+        font-size: 1.3rem;
+    }
+    #result i {
+        font-size: 1.3rem;
+    }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .quiz-title {
+        font-size: 2rem;
+    }
+    .wrapper {
+        margin: 3rem 0;
+        width: 50vw;
+        height: 80vh;
+        padding: 1.5rem 1rem 3rem 1rem;
+        border-radius: 1rem;
+    }
+    .quiz-question {
+        font-size: 2rem;
+    }
+    .quiz-score {
+        font-size: 2rem;
+        margin-bottom: 1.2rem;
+        /* border: 2px solid var(--grey-color); */
+        font-weight: bold;
+        width: 10rem;
+        height: 4rem;
+    }
+    .quiz-question .category {
+        font-size: 1.2rem;
+        padding: 0.6rem 1rem;
+        margin-top: 2rem;
+    }
+    .quiz-options {
+        padding-left: 0;
+    }
+    .quiz-options li {
+        border-radius: 0.5rem;
+        margin: 1.2rem 6rem;
+        padding: 0.6rem 1.2rem;
+        font-size: 1.5rem;
+    }
+    .quiz-foot button {
+        font-size: 1.2rem;
+        margin-top: 5rem;
+    }
+    #result {
+        font-size: 1.3rem;
+    }
+    #result i {
+        font-size: 1.3rem;
     }
 }
