--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 
 /* DEFINE VARIABLES */
 html {
-    --main-color: #36b0fc;
+    --main-color: #242582;
     --light-color: #fff;
     --dark-color: #000;
     --grey-color: #e2dede;
@@ -24,18 +24,21 @@ html {
     display: block;
     margin-bottom: 2rem;
 }
+
 .flex {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 body {
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
     color: var(--dark-color);
     background: var(--bg-color);
 }
+
 .wrapper {
     background: var(--light-color);
     padding: 1.5rem 4rem 3rem 4rem;
@@ -45,10 +48,12 @@ body {
     position: relative;
     box-shadow: 0 4px 6px rgb(0 0 0 / 10%), 0 1px 3px rgb(0 0 0 / 10%);
 }
+
 .quiz-title {
     text-align: center;
     font-size: 2rem;
 }
+
 .quiz-score {
     text-align: right;
     font-weight: 600;
@@ -61,12 +66,14 @@ body {
     margin: 0.5rem auto 1rem auto;
     color: var(--main-color);
 }
+
 .quiz-question {
     font-size: 1.2rem;
     text-align: center;
     line-height: 1.3;
     margin-bottom: 2rem;
 }
+
 .quiz-question .category {
     font-size: 0.9rem;
     font-weight: 500;
@@ -77,10 +84,12 @@ body {
     margin-top: 0.5rem;
     display: inline-block;
 }
+
 .quiz-options {
     list-style-type: none;
     /* margin: 1rem 0; */
 }
+
 .quiz-options li {
     border-radius: 0.5rem;
     font-weight: 600;
@@ -93,15 +102,18 @@ body {
     box-shadow: 0 4px 0 0 #6c4298;
     transition: var(--transition);
 }
+
 .quiz-options li:hover {
     background-color: var(--grey-color);
     color: var(--dark-color);
     border-color: var(--grey-color);
     box-shadow: 0 4px 0 0 #bbbbbb;
 }
+
 .quiz-options li:active {
     transform: scale(0.97);
 }
+
 /* js related */
 .selected {
     background-color: var(--grey-color) !important;
@@ -109,6 +121,7 @@ body {
     border-color: var(--grey-color) !important;
     box-shadow: 0 4px 0 0 #bbbbbb !important;
 }
+
 .quiz-foot button {
     border: none;
     border-radius: 0.5rem;
@@ -127,22 +140,27 @@ body {
     transition: var(--transition);
     box-shadow: 0 4px 0 0 #bbbbbb;
 }
+
 .quiz-foot button:hover {
     background-color: #e6e6e6;
     box-shadow: 0 4px 0 0 #a7a7a7;
 }
+
 .quiz-foot button:active {
     transform: scale(0.95);
 }
+
 #play-again {
     display: none;
 }
+
 #result {
     padding: 0.7rem 0;
     text-align: center;
     font-weight: 600;
     font-size: 1.3rem;
 }
+
 #result i {
     width: 30px;
     height: 30px;
@@ -154,6 +172,13 @@ body {
     color: var(--light-color);
 }
 
+.game-over {
+    margin-top: 2rem;
+    padding: 1rem;
+    border: 2px solid red;
+    border-radius: 2rem;
+}
+
 /* MEDIA QUERIES */
 
 /* Extra small devices (phones, max-width 600px and down) */
@@ -161,6 +186,7 @@ body {
     .quiz-title {
         font-size: 1.5rem;
     }
+
     .wrapper {
         margin: 3rem 0;
         width: 100vw;
@@ -168,9 +194,11 @@ body {
         padding: 1.5rem 1rem 3rem 1rem;
         border-radius: 0;
     }
+
     .quiz-question {
         font-size: 1rem;
     }
+
     .quiz-score {
         font-size: 1rem;
         margin-bottom: 0.5rem;
@@ -179,14 +207,17 @@ body {
         width: 5rem;
         height: 2rem;
     }
+
     .quiz-question .category {
         font-size: 0.9rem;
         padding: 0.2rem 0.4rem;
         display: inline-block;
     }
+
     .quiz-options {
         padding-left: 0;
     }
+
     .quiz-options li {
         border-radius: 0.2rem;
         font-weight: 600;
@@ -194,12 +225,15 @@ body {
         padding: 0.2rem 1rem;
         font-size: 0.75rem;
     }
+
     .quiz-foot button {
         font-size: 0.75rem;
     }
+
     #result {
         font-size: 1.3rem;
     }
+
     #result i {
         font-size: 1.3rem;
     }
@@ -210,6 +244,7 @@ body {
     .quiz-title {
         font-size: 2rem;
     }
+
     .wrapper {
         margin: 3rem 0;
         width: 90vw;
@@ -217,9 +252,11 @@ body {
         padding: 1.5rem 1rem 3rem 1rem;
         border-radius: 1rem;
     }
+
     .quiz-question {
         font-size: 1.5rem;
     }
+
     .quiz-score {
         font-size: 1.2rem;
         margin-bottom: 1rem;
@@ -228,35 +265,43 @@ body {
         width: 6rem;
         height: 3rem;
     }
+
     .quiz-question .category {
         font-size: 0.9rem;
         padding: 0.4rem 0.8rem;
     }
+
     .quiz-options {
         padding-left: 0;
     }
+
     .quiz-options li {
         border-radius: 0.5rem;
         margin: 1rem 0;
         padding: 0.4rem 1rem;
         font-size: 1.2rem;
     }
+
     .quiz-foot button {
         font-size: 1rem;
         margin-top: 5rem;
     }
+
     #result {
         font-size: 1.3rem;
     }
+
     #result i {
         font-size: 1.3rem;
     }
 }
+
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
     .quiz-title {
         font-size: 2rem;
     }
+
     .wrapper {
         margin: 3rem 0;
         width: 80vw;
@@ -264,9 +309,11 @@ body {
         padding: 1.5rem 1rem 3rem 1rem;
         border-radius: 1rem;
     }
+
     .quiz-question {
         font-size: 1.5rem;
     }
+
     .quiz-score {
         font-size: 1.4rem;
         margin-bottom: 1rem;
@@ -275,35 +322,43 @@ body {
         width: 8rem;
         height: 4rem;
     }
+
     .quiz-question .category {
         font-size: 1.2rem;
         padding: 0.5rem 0.9rem;
     }
+
     .quiz-options {
         padding-left: 0;
     }
+
     .quiz-options li {
         border-radius: 0.5rem;
         margin: 1rem 0;
         padding: 0.4rem 1rem;
         font-size: 1.2rem;
     }
+
     .quiz-foot button {
         font-size: 1rem;
         margin-top: 5rem;
     }
+
     #result {
         font-size: 1.3rem;
     }
+
     #result i {
         font-size: 1.3rem;
     }
 }
+
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     .quiz-title {
         font-size: 2rem;
     }
+
     .wrapper {
         margin: 3rem 0;
         width: 60vw;
@@ -311,9 +366,11 @@ body {
         padding: 1.5rem 1rem 3rem 1rem;
         border-radius: 1rem;
     }
+
     .quiz-question {
         font-size: 1.5rem;
     }
+
     .quiz-score {
         font-size: 1.4rem;
         margin-bottom: 1rem;
@@ -322,46 +379,56 @@ body {
         width: 8rem;
         height: 4rem;
     }
+
     .quiz-question .category {
         font-size: 1.2rem;
         padding: 0.6rem 1rem;
         margin-top: 2rem;
     }
+
     .quiz-options {
         padding-left: 0;
     }
+
     .quiz-options li {
         border-radius: 0.5rem;
         margin: 1rem 2rem;
         padding: 0.6rem 1.2rem;
         font-size: 1.5rem;
     }
+
     .quiz-foot button {
         font-size: 1.2rem;
         margin-top: 5rem;
     }
+
     #result {
         font-size: 1.3rem;
     }
+
     #result i {
         font-size: 1.3rem;
     }
 }
+
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .quiz-title {
         font-size: 2rem;
     }
+
     .wrapper {
         margin: 3rem 0;
         width: 50vw;
-        height: 80vh;
+        height: 90vh;
         padding: 1.5rem 1rem 3rem 1rem;
         border-radius: 1rem;
     }
+
     .quiz-question {
         font-size: 2rem;
     }
+
     .quiz-score {
         font-size: 2rem;
         margin-bottom: 1.2rem;
@@ -370,27 +437,33 @@ body {
         width: 10rem;
         height: 4rem;
     }
+
     .quiz-question .category {
         font-size: 1.2rem;
         padding: 0.6rem 1rem;
         margin-top: 2rem;
     }
+
     .quiz-options {
         padding-left: 0;
     }
+
     .quiz-options li {
         border-radius: 0.5rem;
         margin: 1.2rem 6rem;
         padding: 0.6rem 1.2rem;
         font-size: 1.5rem;
     }
+
     .quiz-foot button {
         font-size: 1.2rem;
         margin-top: 5rem;
     }
+
     #result {
         font-size: 1.3rem;
     }
+
     #result i {
         font-size: 1.3rem;
     }
