--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,17 +34,19 @@ html {
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     font-family: 'Poppins', sans-serif;
     color: var(--dark-color);
     background: var(--bg-color);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .wrapper {
     background: var(--light-color);
     padding: 1.5rem 4rem 3rem 4rem;
     width: 60%;
-    /* height: 90vh; */
+    min-height: 90lvh;
     border-radius: 1.5rem;
     position: relative;
     box-shadow: 0 4px 6px rgb(0 0 0 / 10%), 0 1px 3px rgb(0 0 0 / 10%);
@@ -436,6 +438,3 @@ body {
         padding: 1rem 1.2rem;
     }
 }
-
-/* wide screen */
-@media only screen and (min-width: 2000px) {}
