add: drop shadow to logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ html {
     margin: auto;
     display: block;
     margin-bottom: 2rem;
+    box-shadow: 10px 8px 8px #888888;
 }
 
 .flex {
@@ -76,7 +77,6 @@ body {
     font-weight: 600;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
-    /* border: 5px solid var(--grey-color); */
     font-weight: bold;
     width: 100px;
     height: 50px;
@@ -252,6 +252,11 @@ body {
         padding: 1rem;
     }
 
+    .logo {
+        width: 6em;
+        height: 6em;
+    }
+
     .quiz-title {
         font-size: 1.2rem;
     }
@@ -296,6 +301,11 @@ body {
         padding: 1.2rem;
     }
 
+    .logo {
+        width: 6em;
+        height: 6em;
+    }
+
     .quiz-title {
         font-size: 1.3rem;
     }
@@ -329,6 +339,11 @@ body {
         padding: 1.4rem;
     }
 
+    .logo {
+        width: 8em;
+        height: 8em;
+    }
+
     .quiz-title {
         font-size: 1.5rem;
     }
@@ -360,6 +375,11 @@ body {
     .wrapper {
         width: 80vw;
         padding: 1.6rem;
+    }
+
+    .logo {
+        width: 10em;
+        height: 10em;
     }
 
     .quiz-title {
@@ -396,6 +416,11 @@ body {
         padding: 1.8rem;
     }
 
+    .logo {
+        width: 12em;
+        height: 12em;
+    }
+
     .quiz-title {
         font-size: 2.5rem;
     }
@@ -424,6 +449,11 @@ body {
     .wrapper {
         width: 50vw;
         padding: 2rem;
+    }
+
+    .logo {
+        width: 14em;
+        height: 14em;
     }
 
     .quiz-title {
